[package]
name = "rbf"
version = "0.1.0"
authors = ["George"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rbf_interpreter"
path = "src/main.rs"

[lib]
name = "rbf"
path = "src/lib.rs"

[dependencies]


[features]
no_alloc = []
alloc = []
tinix = ["alloc"]

default = ["alloc"]