[package]
name = "rusty_brainfck"
version = "0.1.0"
authors = ["George"]
edition = "2018"
description = "A Small, Slightly Broken BrainFuck Interpreter, Available in both no-std contexts & std contexts."
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rbf_interpreter"
path = "src/main.rs"

[lib]
name = "rbf"
path = "src/lib.rs"

[dependencies]


[features]
no_alloc = []
alloc = []
tinix = ["alloc"]

default = ["alloc"]